# CMakeForGoogleTests

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
